--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -88,28 +88,25 @@
                 <img routerLink="/user/{{ notification.user_responsible.id }}/profile"
                   class="hidden md:block h-8 w-8 rounded-full object-cover mx-1"
                   src="http://localhost:81/assets/img/{{ notification.user_responsible.imgAvatar }}" alt="avatar">
-                <p *ngIf="notification.typeNotification != 2" (click)="notificationRead(notification.id, i)"
+                <p (click)="notificationRead(notification.id, i)"
                   class="text-gray-600 text-sm mx-2">
                   <a routerLink="/user/{{ notification.user_responsible.id }}/profile" class="font-bold">
                   {{ notification.user_responsible.username }} </a>
                   {{ notification.bodyNotification }}
                   <span class="font-bold"></span> . {{ notification.notification_date }}
                 </p>
-                <div>
-                  <p class="ml-2 mr-2">Solicitud de amistad</p>
-                </div>
                 <button *ngIf="notification.typeNotification == 2" class="focus:outline-none mr-3"
                   (click)="acceptOrDeclineRequest(notification.id, notification.user_responsible.id, i, 3)">
-                  <i class="fas fa-check-circle md:ml-10 mr-1 text-green-600 hover:text-green-400"></i>Aceptar</button>
+                  <i class="fas fa-check-circle mr-1 text-green-600 hover:text-green-400"></i>Aceptar</button>
                 <button *ngIf="notification.typeNotification == 2" class="focus:outline-none"
                   (click)="acceptOrDeclineRequest(notification.id, notification.user_responsible.id, i, 1)">
-                  <i class="fas fa-times-circle text-red-700 mr-1 hover:text-red-500"></i>Rechazar</button>
-                <!--<button *ngIf="notification.typeNotification != 2" class="focus:outline-none"
+                  <i class="fas fa-times-circle text-red-700 ml-1 hover:text-red-500"></i>Rechazar</button>
+                <button *ngIf="notification.typeNotification != 2" class="focus:outline-none mr-3"
                 (click)="notificationRead(notification.id, i)">
-                  <i class="fas fa-check-double hover:text-gray-500"></i>Leído</button>-->
+                  <i class="fas fa-check-double mr-1 hover:text-gray-500"></i>Leído</button>
                 <button *ngIf="notification.typeNotification != 2" class="focus:outline-none"
                   (click)="removeNotification(notification.id, i)">
-                  <i class="fas fa-trash-alt text-red-700 hover:text-red-500"></i>Borrar</button>
+                  <i class="fas fa-trash-alt text-red-700 ml-1 hover:text-red-500"></i>Borrar</button>
               </div>
             </div>
 
