--- a/artist4all_angular/src/app/components/secure/home/home.component.html
+++ b/artist4all_angular/src/app/components/secure/home/home.component.html
@@ -52,7 +52,9 @@
       </div>
       <main class="lg:col-span-8 lg:pt-8 lg:pb-10 xl:col-span-7">
         <form #formPublication="ngForm" enctype="multipart/form-data" method="POST" class="flex flex-col" (ngSubmit)="createPublication(); formPublication.reset()">
-          <textarea #textAreaBody="ngModel" [(ngModel)]="bodyPublication" id="bodyPublication" name="bodyPublication" class="mt-3 md:mt-0 w-full resize-y rounded-md shadow border-0 text-md flex-3 mb-2 sm:mb-0 mr-0 sm:mr-3 p-4"
+          <div *ngIf="!showingBodyHint" class="-mb-4"><span class="text-sm inline-block">Cantidad de carácteres permitidos: {{ contador }}</span></div>
+          <div *ngIf="showingBodyHint" class="-mb-4"><span class="text-sm inline-block">Cantidad de carácteres permitidos:</span><span class="inline-block text-sm text-red-600">&nbsp; {{ contador }}</span></div>
+          <textarea #textAreaBody="ngModel" (keyup)="countCharacters($event)" [(ngModel)]="bodyPublication" id="bodyPublication" name="bodyPublication" class="mt-3 md:mt-0 w-full resize-y rounded-md shadow border-0 text-md flex-3 mb-2 sm:mb-0 mr-0 sm:mr-3 p-4"
             rows="5" name="content" placeholder="Escribe algo...">
           </textarea>
           <label for="imgPublication" >
@@ -64,7 +66,7 @@
         <img *ngFor='let url of images'  class="inline-block" [src]="url" height="150" width="200px" style="margin: 5px;"> <br/>
           <div class="w-full flex justify-end" style="margin-bottom: -35px">
                <!-- TODO: button styles when disable to distinguish when u can send form -->
-            <input type="submit" style="top: -95px; right: 10px; max-width: 100px;" [disabled]="bodyPublication == '' || showingImgHint"
+            <input type="submit" style="top: -95px; right: 10px; max-width: 100px;" [disabled]="bodyPublication == '' || showingImgHint || showingBodyHint"
               class="flex-1 justify-center h-full max-h-14 inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-black focus:outline-none w-full relative"
               value="Publicar"/>
           </div>
@@ -72,6 +74,10 @@
         <div *ngIf="showingImgHint" class="font-normal bg-red-100 text-red-900 p-2 rounded-md -mt-8 mb-2 text-sm">
           <i class="fas fa-times-circle"></i>
           Formato no válido (Permitidos: png, jpeg, jpg, gif).
+        </div>
+        <div *ngIf="showingBodyHint" class="font-normal bg-red-100 text-red-900 p-2 rounded-md -mt-8 mb-2 text-sm">
+          <i class="fas fa-times-circle"></i>
+          La cantidad máxima de carácteres es de 255.
         </div>
 
         <div class="px-4 sm:px-0"></div>
