--- a/artist4all_angular/src/app/components/secure/home/home.component.html
+++ b/artist4all_angular/src/app/components/secure/home/home.component.html
@@ -52,8 +52,7 @@
       </div>
       <main class="lg:col-span-8 lg:pt-8 lg:pb-10 xl:col-span-7">
         <form #formPublication="ngForm" enctype="multipart/form-data" method="POST" class="flex flex-col" (ngSubmit)="createPublication(); formPublication.reset()">
-          <div *ngIf="!showingBodyHint" class="-mb-4"><span class="text-sm inline-block">Cantidad de carácteres permitidos: {{ contador }}</span></div>
-          <div *ngIf="showingBodyHint" class="-mb-4"><span class="text-sm inline-block">Cantidad de carácteres permitidos:</span><span class="inline-block text-sm text-red-600">&nbsp; {{ contador }}</span></div>
+          
           <textarea #textAreaBody="ngModel" (keyup)="countCharacters($event)" [(ngModel)]="bodyPublication" id="bodyPublication" name="bodyPublication" class="mt-3 md:mt-0 w-full resize-y rounded-md shadow border-0 text-md flex-3 mb-2 sm:mb-0 mr-0 sm:mr-3 p-4"
             rows="5" name="content" placeholder="Escribe algo...">
           </textarea>
@@ -64,6 +63,8 @@
           <input class="hidden" type="file" #imgPublication (change)="addImgPublication($event.target.files)" id="imgPublication" name="imgPublication[]" ng-model="files" multiple="multiple"/>
           <!-- <button class="inline-block" type="button" (click)="removeSelectedImgs()">Eliminar las imágenes</button> -->
         <img *ngFor='let url of images'  class="inline-block" [src]="url" height="150" width="200px" style="margin: 5px;"> <br/>
+        <div *ngIf="!showingBodyHint" class="-mb-4" style="position: absolute; right:650px; top:250px;"><span class="text-sm inline-block">Quedan {{ contador }} carácteres</span></div>
+        <div *ngIf="showingBodyHint" class="-mb-4" style="position: absolute; right:650px; top:250px;"><span class="text-sm inline-block">Sobran <span class="inline-block text-sm text-red-600"> {{ contador }}</span> carácteres</span></div>
           <div class="w-full flex justify-end" style="margin-bottom: -35px">
                <!-- TODO: button styles when disable to distinguish when u can send form -->
             <input type="submit" style="top: -95px; right: 10px; max-width: 100px;" [disabled]="bodyPublication == '' || showingImgHint || showingBodyHint"
