--- a/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/index-profile/index-profile.component.html
@@ -174,7 +174,7 @@
             </div>
           </div>
 
-          <div *ngIf="isPrivate == 1 && status_follow != 3 && !isMyProfile">
+          <div *ngIf="isPrivate == 1 && status_follow != 3 && !isMyProfile" class="text-center mt-8 text-base">
             Esta cuenta es privada, empieza a seguirla para poder ver sus publicaciones
           </div>
 
