--- a/artist4all_angular/src/app/components/secure/profile/list-of-followers-or-followed/list-of-followers-or-followed.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/list-of-followers-or-followed/list-of-followers-or-followed.component.html
@@ -49,15 +49,14 @@
     </nav>
   </div>
   <div *ngIf="userlist == null && typeList  == 'followers'" class="col-span-6 ml-6 h-96 md:ml-auto">
-      <i class="fas fa-users-slash inline-block mr-6 text-lg md:text-2xl"></i><p class="text-lg md:text-2xl content-center mt-16 inline-block">Todavía no tienes ningún seguidor</p>
+      <i class="fas fa-users-slash inline-block mr-6 text-lg md:text-2xl"></i><p class="text-lg md:text-xl content-center mt-16 inline-block">Todavía no tienes ningún seguidor</p>
   </div>
   <div *ngIf="userlist == null && typeList == 'followed'" class="col-span-6 ml-6 h-96 md:ml-auto">
-      <i class="fas fa-users-slash inline-block mr-6 text-lg md:text-2xl"></i><p class=" text-lg md:text-2xl content-center mt-16 inline-block">Todavía no sigues a ningún usuario </p>
+      <i class="fas fa-users-slash inline-block mr-6 text-lg md:text-2xl"></i><p class=" text-lg md:text-xl content-center mt-16 inline-block">Todavía no sigues a ningún usuario </p>
   </div>
   <div class="block lg:col-span-4 pt-8">
     <div *ngIf="userlist != null">
       <section *ngFor="let user of userlist; index as i;">
-
         <div
           class="mx-auto w-11/12 md:ml-0 relative rounded-lg border border-gray-300 bg-white px-5 py-4 mb-3 shadow-sm flex items-center space-x-3 hover:border-gray-400 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
           <div class="flex-shrink-0">
