styled no publications

--- a/artist4all_angular/src/app/components/secure/home/home.component.html
+++ b/artist4all_angular/src/app/components/secure/home/home.component.html
@@ -160,8 +160,8 @@
               </article>
             </li>
           </ul>
-          <ul class="space-y-4" *ngIf="publications == null">
-            <p>hola</p>
+          <ul class="space-y-4" *ngIf="publications == null" class="text-center mt-8 text-base">
+            <p>Todavía no sigues a nadie</p>
           </ul>
       </main>
       <aside class="hidden lg:pt-10 lg:pb-10 xl:block xl:col-span-3">
