--- a/artist4all_angular/src/app/components/public/login/login.component.html
+++ b/artist4all_angular/src/app/components/public/login/login.component.html
@@ -54,20 +54,13 @@
             </div>
           </div>
         </div>
-        <div class="flex items-center justify-between">
-          <div class="flex items-center">
-            <input id="remember_me" name="remember_me" type="checkbox"
-              class="h-4 w-4 text-purple-600 focus:ring-purple-500 border-gray-300 rounded">
-            <label for="remember_me" class="ml-2 block text-sm text-gray-900">
-              Recuérdame
-            </label>
-          </div>
+        <!--<div class="flex items-center justify-between">
           <div class="text-sm">
             <a href="#" class="font-medium text-purple-600 hover:text-purple-500">
               ¿Has olvidado tu contraseña?
             </a>
           </div>
-        </div>
+        </div>-->
         <div>
           <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-purple-600 hover:bg-purple-700
           focus:outline-none
